# boids

./: CMakeLists.txt  README.md  boid.js  compile_commands.json  gitignore  index.html  main.js  readme.md  style.css
include/: shader.hpp  shaders.hpp
js/: boidmanager.js  main.js
src/: main.cpp
